style: Added item-list repo style

--- a/src/components/Paginator/item-avatar.scss
+++ b/src/components/Paginator/item-avatar.scss
@@ -4,3 +4,10 @@
   height: 50px;
   border-radius: 50%;
 }
+
+.star-span {
+  background: lightblue;
+  display: inline-block;
+  padding: 0 7px;
+  margin-left: 5px;
+}
